# django-mermaid

./: .gitignore  MANIFEST.in  README.md  SECURITY.md  build.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  tests.yml
src/django_mermaid/: apps.py
src/django_mermaid/static/: mermaid.js
src/django_mermaid/templatetags/: __init__.py  mermaid.py
tests/: conftest.py  test_package.py  test_tag.py
