[metadata]
name = django-mermaid
version = attr: django_mermaid.__version__
author = Artyom Vancyan
author_email = artyom@pysnippet.org
description = Django template tag for rendering mermaid diagrams
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ArtyomVancyan/django-mermaid
keywords =
    python
    django
    mermaid
    mermaid-diagrams
    django-templatetag
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Framework :: Django
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages =
    django_mermaid
    django_mermaid.templatetags
install_requires =
    urllib3
    Django
include_package_data = yes
python_requires = >=3.6
package_dir =
    =src
zip_safe = no
