[metadata]
name = django-mermaid
version = attr: django_mermaid.__version__
author = Artyom Vancyan
author_email = artyom@pysnippet.org
description = Django template tag for rendering mermaid diagrams.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pysnippet/django-mermaid
keywords =
    python
    django
    mermaid
    tag
    graph
    jinja
    diagram
    template
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Operating System :: OS Independent
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    Framework :: Django :: 5.2
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License

[options]
packages =
    django_mermaid
    django_mermaid.templatetags
install_requires =
    urllib3
    Django
include_package_data = yes
python_requires = >=3.6
package_dir =
    =src
zip_safe = no
